# cascade-lattice

./: ASTEROIDS_EASTER_EGG.md  CHANGELOG.md  README.md  SECURITY.md  TINYPHYSICS_ALTERNATIVE.md  brake.txt  pyproject.toml  test_tinyphysics.py  tui.py
.github/workflows/: publish.yml
cascade/: __init__.py  demo.py  proxy.py  tui.py
cascade/forensics/: __init__.py  analyzer.py  artifacts.py  fingerprints.py
cascade/patches/: openai_patch.py
cascade_lattice/: __init__.py  store.py
cascade_lattice/analysis/: __init__.py  metrics.py  tracer.py
cascade_lattice/core/: __init__.py  adapter.py  event.py  graph.py  provenance.py
cascade_lattice/hold/: __init__.py  primitives.py
docs/: OPENAI_RESPONSES_ACCLIMATION.md  RELEASE_HARDENING.md
tests/: test_forensics.py  test_openai_patch.py  test_proxy.py
